tests/PhiCore/compile_failure/src/Core/NotNullObserverPtr.default.fail.cpp
#include <Phi/Core/ObserverPtr.hpp>

int main()
{
    phi::NotNullObserverPtr ptr;
}
